--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="lib/lucene-core-4.9.0.jar"/>
 	<classpathentry kind="lib" path="lib/lucene-analyzers-common-4.9.0.jar"/>
 	<classpathentry kind="lib" path="lib/hebmorph-core-1.5.0.jar" sourcepath="lib/hebmorph-core-1.5.0-sources.jar"/>
+	<classpathentry kind="lib" path="lib/weka.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
